working on several improvements
