# api-server/kaveh-cluster-api/api/const/RbdImageStatus.js
@@ -1,0 +1,11 @@
+"use strict";
+
+/**
+ * @type {{up: string, missing: string, _: [string,string]}}
+ */
+module.exports = {
+  up: 'up',
+  missing: 'missing',
+  failed: 'failed',
+  _: ['up', 'missing', 'failed']
+};
